--- a/amongus.html
+++ b/amongus.html
@@ -7,4 +7,35 @@
       </a>
    </body>
 </html><iframe frameborder="0" width="1300px" height="700px" src="https://simplemathhelper.tk/main/hvtrs8%2F-nmw%2Cge%2Frlcy-ilngrqlmtj-nla%2F6067-aoolg%2Fuq/"></iframe>
- <h3>
+ <h3><!DOCTYPE html>
+<html>
+<head>
+<meta name="viewport" content="width=device-width, initial-scale=1">
+<style>
+body {
+  padding: 25px;
+  background-color: white;
+  color: black;
+  font-size: 25px;
+}
+
+.dark-mode {
+  background-color: black;
+  color: white;
+}
+</style>
+</head>
+<body>
+<button onclick="myFunction()">Toggle dark mode</button>
+
+<script>
+function myFunction() {
+   var element = document.body;
+   element.classList.toggle("dark-mode");
+}
+</script>
+
+</body>
+</html>
+
+
