--- a/index.html
+++ b/index.html
@@ -2,6 +2,8 @@
 <!DOCTYPE html>
 <html>
   <head>
+    <html>
+<body style="background-color:powderblue;">
     <body style="background-color:babyblue;">
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width">
@@ -21,8 +23,8 @@
    </head>
    <body>
       The following image works as a link:<br>
-      <a href="amongus.html">
-         <img alt="amongus" src="among us.png"
+      <a href="cookierunner.html">
+         <img alt="cookierun" src="cookie.png"
          width=300" height="250">
       </a>
    </body>
@@ -40,6 +42,37 @@
       </a>
    </body>
 </html>
-<video id="background-video" autoplay loop muted poster="https://assets.codepen.io/6093409/river.jpg">
-  <source src="https://assets.codepen.io/6093409/river.mp4" type="video/mp4">
-</video>
+
+<!DOCTYPE html>
+<html>
+<head>
+<meta name="viewport" content="width=device-width, initial-scale=1">
+<style>
+body {
+  padding: 25px;
+  background-color: white;
+  color: black;
+  font-size: 25px;
+}
+
+.dark-mode {
+  background-color: black;
+  color: white;
+}
+</style>
+</head>
+<body>
+<button onclick="myFunction()">Toggle dark mode</button>
+
+<script>
+function myFunction() {
+   var element = document.body;
+   element.classList.toggle("dark-mode");
+}
+</script>
+
+</body>
+</html>
+
+<h6>Login</h6>
+
